--- a/client/src/app/emp-login-page/emp-login-page.component.html
+++ b/client/src/app/emp-login-page/emp-login-page.component.html
@@ -7,10 +7,10 @@
             <h3>Employee login</h3>
 
             <div class="form-group">
-                <input type="text" name="email" class="form-control" placeholder="Your Email *" value="" />
+                <input type="text" name="email" class="form-control" placeholder="Your Email *" [(ngModel)]="email" />
             </div>
             <div class="form-group">
-                <input type="password"  class="form-control" placeholder="Your Password *" value="" />
+                <input type="password"  class="form-control" placeholder="Your Password *" [(ngModel)]="pswd" />
             </div>
             <div class="form-group">
                 <input type="submit" class="btnSubmit" (click)="emp_loggedIn()" value="Login" />
