remove Item added

--- a/client/src/app/can-manager-logged-in-header/can-manager-logged-in-header.component.html
+++ b/client/src/app/can-manager-logged-in-header/can-manager-logged-in-header.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class="col-xs-4 col-sm-4  col-md-4 col-lg-4">
             <button mat-button class="upload_button btn" (click)="uploadMenu()">Upload Menu</button>
-            <button mat-button class="analyze_button btn">Analyze</button>
+            <!-- <button mat-button class="analyze_button btn">Analyze</button> -->
             <button type="button" class="logout_button btn btn-default btn-sm">
                 <span class="glyphicon glyphicon-log-out"></span> Log out
             </button>
