--- a/client/src/app/can-manager-logged-in-page/can-manager-logged-in-page.component.html
+++ b/client/src/app/can-manager-logged-in-page/can-manager-logged-in-page.component.html
@@ -23,6 +23,11 @@
                                         <td>{{item.dishName}}</td>
                                         <td>{{item.type}}</td>
                                         <td>{{item.price}}</td>
+                                        <td>
+                                            <button type="button" class="close" aria-label="Close" (click)="remove(item.dishName)">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </td>
                                       </tr>
                                     </tbody>
                                   </table>
@@ -48,6 +53,11 @@
                                         <td>{{item.dishName}}</td>
                                         <td>{{item.type}}</td>
                                         <td>{{item.price}}</td>
+                                        <td>
+                                            <button type="button" class="close" aria-label="Close" (click)="remove(item.dishName)">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </td>
                                       </tr>
                                     </tbody>
                                   </table>
@@ -73,6 +83,11 @@
                                         <td>{{item.dishName}}</td>
                                         <td>{{item.type}}</td>
                                         <td>{{item.price}}</td>
+                                        <td>
+                                            <button type="button" class="close" aria-label="Close" (click)="remove(item.dishName)">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </td>
                                       </tr>
                                     </tbody>
                                   </table>
